k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-azure-app
  namespace: springboot-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: spring-azure-app
  template:
    metadata:
      labels:
        app: spring-azure-app
    spec:
      serviceAccountName: springboot-service-account
      containers:
        - name: spring-azure-app
          image: ireachaksacr.azurecr.io/spring-azure-app:latest
          ports:
            - containerPort: 8080
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          command: ["/bin/sh", "-c"]
          args:
            - java $JAVA_OPTS -jar /app/app.jar
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "springboot-db-kv"
