k8s/service.yaml


apiVersion: v1
kind: Service
metadata:
  name: spring-azure-service
  namespace: springboot-app
spec:
  type: LoadBalancer
  selector:
    app: spring-azure-app       # matches deployment pod label exactly
  ports:
  - port: 80
    targetPort: 8080
