k8s/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-azure-ingress
  namespace: springboot-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # Optional for TLS if using cert-manager:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: app.ireachdevops.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-azure-service
            port:
              number: 80
